--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pre-entrega 1 | Comisión </title>
+    <title>Pre-entrega 1 | Comisión 53970</title>
 </head>
 <body>
     <h1>Pre-entrega Coder JS</h1>
-    <script src=""></script>
+    <script src="./codigo.js"></script>
 </body>
 </html>
