modificaciones js y css

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pre-entrega 1 | Comisión 53970</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Pre-entrega Coder JS</h1>
-    <h2></h2>
+    <h1>Pre-entrega Coder JS 👋</h1>
+    <h2>Aranda, Facundo</h2>
     <script src="./codigo.js"></script>
 </body>
 </html>
