--- a/calcConstrucion.html
+++ b/calcConstrucion.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Pre-entrega CoderHouse - Javascript</h1>
-    <h2><a href="./calcImc.html">Primera Pre-entrega - Calculadora IMC</a></h2>
-    <h2><a href="./calcConstrucion.html">Segunda Pre-entrega - Calculadora de Construcción con arrays</a></h2>
+    <h1>Calculadora de Materiales</h1>
+
+
+
+
+    <script src="./codConstruc.js"></script>
 </body>
 </html>
