--- a/calcConstrucion.html
+++ b/calcConstrucion.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Coder JS</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Calculadora de Materiales</h1>
+    <h1>2° Preentrega - Comision Coder JS</h1>
+    <h2>Abrir Consola</h2>
 
 
 
-
+    <script src="./productos.js"></script>
     <script src="./codConstruc.js"></script>
+
 </body>
 </html>
