--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Coder JS</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Pre-entrega CoderHouse - Javascript</h1>
     <h2><a href="./calcImc.html">Primera Pre-entrega - Calculadora IMC</a></h2>
-    <h2><a href="./calcConstrucion.html">Segunda Pre-entrega - Calculadora de Construcción con arrays</a></h2>
+    <h2><a href="./calcConstrucion.html">Segunda Pre-entrega - </a></h2>
 </body>
 </html>
