--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <h1>Pre-entrega CoderHouse - Javascript</h1>
     <h2><a href="./calcImc.html">Primera Pre-entrega - Calculadora IMC</a></h2>
-    <h2><a href="./calcConstrucion.html">Segunda Pre-entrega - </a></h2>
+    <h2><a href="./calcConstrucion.html">Segunda Pre-entrega - Array - Find - Filter</a></h2>
+
+
+    <script>document.getElementsByTagName("h1")[0].style.fontSize = "4vw";</script>
+    <script>document.getElementsByTagName("h2")[0].style.fontSize = "2vw";</script>
 </body>
 </html>
